--- a/css/style.css
+++ b/css/style.css
@@ -49,14 +49,14 @@
     height: 100%;
   }
   .shadow {
-    background-color: var(--basic-white);
+    background: var(--basic-white);
     max-width: 1200px;
     margin: 0 auto;
     padding: 0;
     box-shadow: 0px 5px 15px 0px rgb(0, 1, 1, 0.2);
   }
   .main-navigation {
-    padding-top: 10px;
+    padding-top: 16px;
     z-index: 2;
     background-color: transparent;
   }
@@ -70,38 +70,47 @@
     display: block;
     width: 138px;
     height: 70px;
-    left: -60px;
+    left: -67px;
     margin-left: 50%;
   }
   
   /* Container*/
   .container {
     text-align: center;
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
-    padding: 0;
+    padding: 0 auto;
   }
    
   /* Site Navigation */
   .site-navigation {
     margin: 0;
     padding: 0;
+    width: 1200px;
     list-style: none;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
   }
   .site-navigation li {
-    margin-right: 72px;
     margin-left: 73px;
-    margin-top: 7px;
+    /*margin-right: 134px;*/
     max-width: 200px;
   }
-  .site-navigation li:nth-child(2) {
-    margin-left: 50px;
+  .site-navigation li:nth-child(2n) { /* n - В целях переполнения нижнего ряда*/
+    margin-left: 135px;
   }
   .site-navigation li:nth-child(3) {
-    margin-left: 350px;
+    margin-left: 420px;
+  }
+  .site-navigation li:nth-child(4) {
+    margin-left: 147px;
+  }
+  .site-navigation li:nth-child(7) { /*В целях переполнения*/
+    margin-left: 420px;
+  }
+  .site-navigation li:nth-child(8) { /*В целях переполнения*/
+    margin-left: 147px;
   }
   .site-navigation a {
     color: var(--basic-black);
@@ -122,29 +131,31 @@
     height: 509px;
     background-image: url(../img/Shape4.png), url(../img/backgroundphoto.png);
     background-position: bottom;
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     background-size: 100% auto;
     margin: 0 auto;
-    /*margin-top: -27px; наложение на главный логотип*/
-    
   }
   .welcome-logo {
     margin-top: 78px;
   }
+  .welcome-logo-mean {
+    margin-top: 7px;
+  }
   .welcome-logo-big {
     display: block;
     margin: 0 auto;
-    padding: 40px;
-    margin-top: 43px;
+    margin-top: 48px;
   }
   
   /*Center text*/
   .center-text {
-    margin-top: 43px;
-    margin-bottom: 51px;
+    margin-top: 45px;
     line-height: 26px;
   }
-  
+  .center-text p {
+    margin-top: 43px;
+    height: 62px;
+  }
   /* Features */
   .features-list {
     display: flex;
@@ -174,19 +185,18 @@
     line-height: 21px;
   }
   .feature-item p {
-    margin: 30px 10px;
+    margin-top: 24px;
   }
   .features-clause {
     display: grid;
     grid-gap: 2;
     grid-template-columns: 1fr 1fr 1fr;
-     /*display: flex;
-    justify-content: space-between;*/
     margin: 0;
     padding: 0;
     height: 300px;
     list-style: none;
     text-align: center;
+    margin-bottom: 35px;
   }
   .features-clause h3 {
     font-size: 21px;
@@ -194,25 +204,31 @@
   }
   .feature-point {
     text-align: center;
-    padding-top: 50px;
+    padding-top: 67px;
+  }
+  .feature-point3 {
+    text-align: center;
+    padding-top: 60px;
   }
   .features-clause-bottom {
     display: grid;
     grid-gap: 2;
     grid-template-columns: 1fr 1fr 1fr;
-    /*display: flex;
-    justify-content: space-between;*/
     margin: 0;
     padding: 0;
     height: 256px;
     list-style: none;
     text-align: center;
     background-color: var(--basic-feature-list);
+    
   }
   .features-clause-list h3 {
-    padding-top: 47px;
+    padding-top: 25px;
     font-size: 21px;
     line-height: 21px;
+  }
+  .features-clause-list p {
+    padding-top: 6px;
   }
   .feature-item p,
   .features-clause p,
@@ -222,22 +238,19 @@
   }
   
   /* Appointment */
-  
   .appointment h2{
     font-size: 30px;
     line-height: 24px;
-    padding-top: 40px;
-    padding-bottom: 10px;
+    padding-top: 30px;
+    padding-bottom: 8px;
   }
   .appointment-info{
     font-size: 14px;
     line-height: 24px;
-    margin: 0;
-    margin-bottom: 50px;
+    margin-bottom: 43px;
   }
   
   /*Поиск гостиницы в Седоне*/
-  
   .search-hotels {
     text-transform: uppercase;
     display: inline-block;
@@ -253,6 +266,7 @@
     font-style: bold;
     vertical-align: middle;
     border: none;
+
   }
   .search-hotels:hover,
   .search-hotels:focus {
@@ -263,14 +277,14 @@
     color: var(--catalog-name-peace);
    /*opacity: 0.3;*/
   }
-  .search-window {
-    /*display: none;*/
+  .search-window { /*modal возможно перенести за body!?*/
+    display: non;
     position: absolute;
     width: 513px;
     height: 355px;
-    padding-top: 45px;
+    padding-top: 40px;
     padding-left: 55px;
-    margin-left: 315px;
+    margin-left: 316px;
     font-weight: 700;
     text-align: left;
     background-color: var(--basic-white);
@@ -399,21 +413,24 @@
   }
   
   /* Modal */
-  .modal-map {
-    margin-top: -13px;
+  .modal-map { /*по желанию удалить*/
     color: inherit;
     background-image: url("img/map.jpg");
     background-position: 0 0;
     background-repeat: repeat;
   }
-  
+  iframe {
+    width: 1200px;
+    height: 594px;
+    border: none;
+  }
   /* Main footer */
   .main-footer {
     color: var(--basic-black);
     background-color: var(--basic-white);
     width: 1200px;
     height: 120px;
-    margin-top: -140px;
+    margin-top: -125px;
     opacity: 90%;
   }
   .footer-catalog{
@@ -439,7 +456,7 @@
     width: 200px;
     height: 100px;
     margin-left: 136px;
-    margin-top: 33px;
+    margin-top: 28px;
   }
   .social-list{
     display: flex;
@@ -448,8 +465,8 @@
     list-style: none;
     width: 150px;
     height: 48px;
-    margin-top: 40px;
-    margin-left: 90px; 
+    margin-top: 35px;
+    margin-left: 88px; 
   }
   .social-button {
     display: flex;
@@ -477,8 +494,8 @@
     justify-content: space-between;
     width: 200px;
     height: 50px;
-    margin-top: 33px;
-    margin-left: 70px;
+    margin-top: 26px;
+    margin-left: 68px;
     line-height: 36px;
   }
   .logo-button:focus path,
@@ -489,9 +506,7 @@
     fill: var(--basic-black);
     opacity: 0.3;
   }
-  
-  
-  
+    
   /*CATALOG/ /*CATALOG/ /*CATALOG/ /*CATALOG/ /*CATALOG*/ 
   
   /*breadcrumbs*/
@@ -521,35 +536,34 @@
   }
   .breadcrumbs:nth-child(2) {
     position: relative;
-    left: -120px;
+    left: -106px;
   }
   .breadcrumbs:nth-child(3) {
     position: relative;
-    left: 200px;
+    left: 210px;
   }
   .header-bold {
     font-size: 16px;
     font-weight: bold;
     text-align: left;
+    margin-bottom: 5px;
   }
   .text-bold {
     text-align: left;
     font-size: 14px;
     font-weight: 400;
     color: var(--basic-white);
+    margin-bottom: 20px;
+    
   }
   .filter-label {
     margin-left: 40px;
     cursor: pointer;
     position: relative;
-    margin-bottom: 21px;
     line-height: 25px;
     color: var(--basic-white);
-   
   }
-  .filter-label:last-of-type {
-    margin-bottom: 20px;
-  }
+
   .filter-label::after,
   .filter-label::before {
     content: '';
@@ -560,10 +574,12 @@
     height: 23px;
     top: 0;
     left: -40px;
+   
   }
   .filter-label::after {
     background-image: url(../img/checkbox-on.svg);
     display: none;
+    
   }
   .filter-label::before {
     background-image: url(../img/checkbox-off.svg);
@@ -603,13 +619,12 @@
     border: solid var(--basic-white) 2px;
     border-radius: 2px;
     margin-bottom: 10px;
-    margin-top: 10px;
     width: 317px;
     height: 36px;
   }
   .split-line {
     position: relative;
-    top: 6px
+    top: 6px;
   }
   input.min-price, input.max-price {
     display: inline-block;
@@ -684,6 +699,8 @@
     font-size: 14px;
     line-height: 21px;
     text-transform: uppercase;
+    margin-top: 10px;
+    margin-right: 8px;
   }
   input.form-btn:focus,
   input.form-btn:hover,
@@ -706,20 +723,32 @@
     font-size: 12px;
     line-height: 18px;
   }
+  .search-catalog h2 {
+    text-align: start;
+    width: 160px;
+    margin-left: 75px;
+  }
   .catalog-list {
-    display: flex;
+    /*display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    list-style: none;
+    justify-content: space-between;*/
+    display: grid;
+    grid-template-columns: repeat(8, 5fr) ;
+    grid-gap: 10px;
+    width: 680px;
     margin-top: 18px;
-    margin-left: -50px;
+    margin-left: -9px;
+    padding-left: 0;
+    padding-bottom: 20px;
     font-size: 12px;
     line-height: 18px;
+    list-style: none;
   }
   .catalog-filter {
     position: relative;
     left: 600px;
     width: 40px;
+    top: 5px;
   }
   .min-filter {
     transform: rotate(180deg);
@@ -735,13 +764,15 @@
   .min-filter:active path {
     fill: var(--special-light);
   }
+  .type-catalog  {
+   margin-left: -10px;
+  }
   .type-catalog,
   .rating-catalog {
     color: var(--basic-black);
     opacity: 0.3;
-    text-decoration: underline ;
-    text-decoration-style: dotted;
-    text-decoration-color: var(--special-light);
+    text-decoration: none;
+    border-bottom: 1px var(--special-light) dotted;
   }
   .price-catalog {
     color: var(--special-light);
@@ -789,20 +820,37 @@
     margin-top: 5px;
     margin-right: 30px;
     margin-left: 73px;
+    object-fit: contain;
   }
   .filter-category {
     float: left;
     text-align: left;
-    margin-top: -20px;
-    margin-bottom: -15px;
+    margin-top: -15px;
+    margin-bottom: -25px;
     cursor: default;
+    outline: 2px solid rgba(0, 255, 0, 0.5);
   }
-  .filter-category-sum{
-    margin-left: 40px;
+  .filter-category h2{
+    width: 750px;
   }
+  .filter-category-hotel{
+   
+    outline: 2px solid rgba(0, 64, 255, 0.5);
+   }
+ .filter-category-hotel th{
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+  width: 100px;
+ }
+ .filter-category-hotel th:last-child{
+  padding-left: 10px;
+  min-width: 96px;
+ }
   .filter-rating {
     width: 110px;
     margin-left: 530px;
+    cursor: default;
   }
   .filter-rating-star {
     display: flex;
@@ -868,4 +916,3 @@
     background: var(--button-reservation-press);
     color: var(--catalog-name-peace);
   }
-  
