--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 0;
-    box-shadow: 0px 5px 15px 0px rgb(0, 1, 1, 0.2);
+    -webkit-box-shadow: 0px 5px 15px 0px rgb(0, 1, 1, 0.2);
+            box-shadow: 0px 5px 15px 0px rgb(0, 1, 1, 0.2);
   }
   .main-navigation {
     padding-top: 16px;
@@ -88,9 +89,14 @@
     padding: 0;
     width: 1200px;
     list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
   .site-navigation li {
     margin-left: 73px;
@@ -158,9 +164,14 @@
   }
   /* Features */
   .features-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: stretch;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: stretch;
+        -ms-flex-pack: stretch;
+            justify-content: stretch;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -188,8 +199,10 @@
     margin-top: 24px;
   }
   .features-clause {
+    display: -ms-grid;
     display: grid;
     grid-gap: 2;
+    -ms-grid-columns: 1fr 2 1fr 2 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     margin: 0;
     padding: 0;
@@ -211,8 +224,10 @@
     padding-top: 60px;
   }
   .features-clause-bottom {
+    display: -ms-grid;
     display: grid;
     grid-gap: 2;
+    -ms-grid-columns: 1fr 2 1fr 2 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     margin: 0;
     padding: 0;
@@ -288,12 +303,18 @@
     font-weight: 700;
     text-align: left;
     background-color: var(--basic-white);
-    box-shadow: 0px 7px 15px 0px rgb(0, 1, 1, 0.15);
+    -webkit-box-shadow: 0px 7px 15px 0px rgb(0, 1, 1, 0.15);
+            box-shadow: 0px 7px 15px 0px rgb(0, 1, 1, 0.15);
   }
   .appointment-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     width: 458px;
     height: 290px;
   }
@@ -320,7 +341,8 @@
     background-color: var(--basic-neutral);
     border: none;
     font: inherit;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     color: var(--basic-black);
     font-weight: 700;
     text-transform: uppercase;
@@ -347,7 +369,8 @@
     background-color: var(--basic-neutral);
     border: none;
     font: inherit;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     color: var(--basic-black);
     font-weight: 700;
     text-transform: uppercase;
@@ -438,11 +461,15 @@
   background-color: var(--basic-white);
   }
   .main-footer .container {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
   }
   .footer-catalog .container {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
   }
   .footer-contacts a{
@@ -459,9 +486,14 @@
     margin-top: 28px;
   }
   .social-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     list-style: none;
     width: 150px;
     height: 48px;
@@ -469,9 +501,15 @@
     margin-left: 88px; 
   }
   .social-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 46px;
     height: 48px;
     color: inherit;
@@ -489,9 +527,14 @@
     opacity: 0.3;
   }
   .footer-copyright {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 200px;
     height: 50px;
     margin-top: 26px;
@@ -517,26 +560,27 @@
     background-position: top;
     background-repeat: no-repeat;
     background-size: 100% auto;
-    margin: 15px auto;
+    margin: 19px auto;
   }
   .breadcrumbs {
     display: inline-block;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     vertical-align: top;
     border: none;
     list-style: none;
     color: var(--basic-white);
     background-position: 0 0;
     background-repeat: repeat;
-    margin-top: 26px;
+    margin-top: 27px;
   }
   .breadcrumbs:nth-child(1) {
     position: relative;
-    left: -200px;
+    left: -205px;
   }
   .breadcrumbs:nth-child(2) {
     position: relative;
-    left: -106px;
+    left: -110px;
   }
   .breadcrumbs:nth-child(3) {
     position: relative;
@@ -553,8 +597,7 @@
     font-size: 14px;
     font-weight: 400;
     color: var(--basic-white);
-    margin-bottom: 20px;
-    
+    margin-bottom: 20px; 
   }
   .filter-label {
     margin-left: 40px;
@@ -563,7 +606,6 @@
     line-height: 25px;
     color: var(--basic-white);
   }
-
   .filter-label::after,
   .filter-label::before {
     content: '';
@@ -574,12 +616,10 @@
     height: 23px;
     top: 0;
     left: -40px;
-   
   }
   .filter-label::after {
     background-image: url(../img/checkbox-on.svg);
     display: none;
-    
   }
   .filter-label::before {
     background-image: url(../img/checkbox-off.svg);
@@ -619,6 +659,7 @@
     border: solid var(--basic-white) 2px;
     border-radius: 2px;
     margin-bottom: 10px;
+    padding: 0 auto;
     width: 317px;
     height: 36px;
   }
@@ -658,7 +699,6 @@
     top: 50%;
     left: 0;
     right: 0;
-    margin-top: -3px;
     height: 2px;
     background: var(--basic-black);
     opacity: 0.3;
@@ -667,7 +707,7 @@
     left: 0;
   }
   .range-controls .max-toggle {
-    left: 78%;
+    left: 79%;
   }
   .range-controls .toggle {
     position: absolute;
@@ -678,7 +718,8 @@
     background: var(--special-toggle);
     cursor: pointer;
     border-radius: 50%;
-    box-shadow: 0px 2px 1px var(--special-toggle);
+    -webkit-box-shadow: 0px 2px 1px var(--special-toggle);
+            box-shadow: 0px 2px 1px var(--special-toggle);
   }
   .range-controls .toggle:focus,
   .range-controls .toggle:hover {
@@ -700,7 +741,7 @@
     line-height: 21px;
     text-transform: uppercase;
     margin-top: 10px;
-    margin-right: 8px;
+    margin-right: 10px;
   }
   input.form-btn:focus,
   input.form-btn:hover,
@@ -712,14 +753,16 @@
  
   /*Sorting*/
   .search-catalog {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 270px 80px 220px 1140px;
     grid-template-columns: 270px 80px 220px 1140px; 
     background-color: var(--basic-white);
     border-bottom: solid 2px var(--special-border);
   }
   .search-catalog p {
-    margin-left: -75px;
-    margin-top: 18px;
+    margin-left: -70px;
+    margin-top: 12px;
     font-size: 12px;
     line-height: 18px;
   }
@@ -727,16 +770,20 @@
     text-align: start;
     width: 160px;
     margin-left: 75px;
+    margin-top: 12px;
   }
+ 
   .catalog-list {
     /*display: flex;
     flex-wrap: wrap;
     justify-content: space-between;*/
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 5fr 10px 5fr 10px 5fr 10px 5fr 10px 5fr 10px 5fr 10px 5fr 10px 5fr;
     grid-template-columns: repeat(8, 5fr) ;
     grid-gap: 10px;
     width: 680px;
-    margin-top: 18px;
+    margin-top: 17px;
     margin-left: -9px;
     padding-left: 0;
     padding-bottom: 20px;
@@ -746,12 +793,14 @@
   }
   .catalog-filter {
     position: relative;
-    left: 600px;
+    left: 592px;
+    top: 8px;
     width: 40px;
-    top: 5px;
   }
   .min-filter {
-    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg);
     margin-left: 4px;
   }
   .max-filter:focus path,
@@ -781,12 +830,14 @@
   .price-catalog:hover {
     color: var(--special-light);
     text-decoration: underline ;
-    text-decoration-style: dotted;
+    -webkit-text-decoration-style: dotted;
+            text-decoration-style: dotted;
   }
   .price-catalog:active{
     color: var(--basic-black);
     text-decoration: none;
-    text-decoration-style: none;
+    -webkit-text-decoration-style: none;
+            text-decoration-style: none;
   }
   .type-catalog:focus,
   .type-catalog:hover,
@@ -800,17 +851,21 @@
     color: var(--basic-black);
     opacity: 1;
     text-decoration: none;
-    text-decoration-style: none;
+    -webkit-text-decoration-style: none;
+            text-decoration-style: none;
   }
   
   /*Найденные отели*/
   
   .filter-option {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 237px 260px 110px;
     grid-template-columns: 237px 260px 110px;
-    align-content: start;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    -ms-flex-line-pack: start;
+        align-content: start;
+    padding-top: 25px;
+    padding-bottom: 15px;
     border-bottom: solid 2px var(--special-border);
   }
   .filter-foto {
@@ -820,22 +875,20 @@
     margin-top: 5px;
     margin-right: 30px;
     margin-left: 73px;
-    object-fit: contain;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
   .filter-category {
     float: left;
     text-align: left;
-    margin-top: -15px;
-    margin-bottom: -25px;
+    margin-top: -18px;
     cursor: default;
-    outline: 2px solid rgba(0, 255, 0, 0.5);
   }
   .filter-category h2{
     width: 750px;
   }
   .filter-category-hotel{
-   
-    outline: 2px solid rgba(0, 64, 255, 0.5);
+    margin-top: -10px;
    }
  .filter-category-hotel th{
   font-size: 14px;
@@ -849,17 +902,26 @@
  }
   .filter-rating {
     width: 110px;
-    margin-left: 530px;
+    margin-left: 523px;
     cursor: default;
   }
   .filter-rating-star {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    list-style: none;
+    margin: auto;
+  }
+  .filter-rating-star li{
+    margin-left: 5px;
   }
   .filter-rating-hotel {
     width: 110px;
     height: 24px;
-    margin-top: 47px;
+    margin-top: 45px;
     padding-top: 3px;
     color: var(--basic-dark);
     background-color: var(--basic-neutral);
@@ -874,7 +936,7 @@
     opacity: 0.3;
   }
   
-  /*Buttons*/
+  /*Buttons reservation*/
   
   .button-more {
     font: inherit;
