--- a/css/style.css
+++ b/css/style.css
@@ -290,10 +290,26 @@
   .search-hotels:active {
     background: var(--button-reservation-press);
     color: var(--catalog-name-peace);
-   /*opacity: 0.3;*/
   }
-  .search-window { /*modal возможно перенести за body!?*/
-    display: non;
+
+  .modal {
+    position: relative;
+    width: 570px;
+    margin: 0 auto;
+    font-weight: 700;
+    line-height: 26px;
+  }
+
+  .modal-search { 
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    display: none;
     position: absolute;
     width: 513px;
     height: 355px;
@@ -306,18 +322,40 @@
     -webkit-box-shadow: 0px 7px 15px 0px rgb(0, 1, 1, 0.15);
             box-shadow: 0px 7px 15px 0px rgb(0, 1, 1, 0.15);
   }
-  .appointment-form {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    width: 458px;
-    height: 290px;
+
+  .modal-show {
+    display: block;
+ ;
   }
+  .modal_form-animation {
+    animation-name: bounce;
+    animation-duration: 0.6s;
+  }
+
+  @-webkit-keyframes bounce {
+    0% {
+      -webkit-transform: translateY(-100px);
+    }
+    100% {
+      -webkit-transform: translateY(0px);
+    }
+  }
+
+  .modal_form-close {
+    display: none;
+  }
+  .modal_error {
+    display: none;
+    position: absolute;
+    top: 235px;
+    left: 60px;
+    font-size: 10px;
+  }
+  .modal_error-show {
+    display: block;
+  }
+ 
+  
   .calendar {
     position: absolute;
     width: 21px;
@@ -435,13 +473,7 @@
     color: var(--special-light);
   }
   
-  /* Modal */
-  .modal-map { /*по желанию удалить*/
-    color: inherit;
-    background-image: url("img/map.jpg");
-    background-position: 0 0;
-    background-repeat: repeat;
-  }
+  /* Modal Map */
   iframe {
     width: 1200px;
     height: 594px;
